# exercises

./: .eslintignore  .gitignore  LICENSE  Makefile  README.md  cardio.json  exercises.json  flexibility.json  index.html  manifest.webmanifest  muscles.json  package-lock.json  package.json  schema-cardio.json  schema-flexibility.json  schema.json  strength.json  svelte.config.js  sw.js  vite.config.js  vite.config.ts
agent/: .mise.toml  AGENTS.md  Makefile  README.md  pyproject.toml
agent/experiments/data/: flexibility.json  strength.json
agent/experiments/evaluators/: end_to_end_flexibility_flow.py  end_to_end_strength_flow.py  flexibility_muscles_node.py  flexibility_name_node.py  flexibility_steps_node.py  strength_muscles_node.py  strength_name_node.py  strength_steps_node.py
agent/experiments/reporters/: flexibility_muscles_node.py  flexibility_name_node.py  flexibility_steps_node.py  strength_muscles_node.py  strength_name_node.py  strength_steps_node.py
agent/experiments/runners/: end_to_end_flexibility_flow.py  end_to_end_strength_flow.py  flexibility_muscles_node.py  flexibility_name_node.py  flexibility_steps_node.py  strength_muscles_node.py  strength_name_node.py  strength_steps_node.py
agent/notebooks/: scoring.py
agent/prompts/: flexibility-exercise-muscles.md  flexibility-exercise-name.md  flexibility-exercise-steps.md  strength-exercise-muscles.md  strength-exercise-steps.md  strength-name-exercise.md
agent/src/: config.py  exercise_agent.py  flows.py  log.py  main.py  model.py  nodes.py
agent/tests/: conftest.py  nodes.py  test_nodes.py
(+367 files in other folders)
