[project]
name = "agent"
version = "0.1.0"
description = "AI Agent for creating exercises"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.74.0",
    "pocketflow>=0.0.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "fuzzywuzzy[speedup]>=0.18.0",
    "isort>=6.0.1",
    "pandas>=2.3.0",
    "pytest>=8.4.1",
    "ruff>=0.11.13",
    "ty>=0.0.1a10",
]
